--- a/coredns/Dockerfile
+++ b/coredns/Dockerfile
@@ -2,8 +2,8 @@ FROM alpine:edge as builder
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add go git musl-dev gcc g++ \
-        && git clone https://github.com/coredns/coredns.git.git /usr/src/coredns \
-        && cd /usr/src/coredns && echo proxy:github.com/coredns/proxy  plugin.cfg && make \
+        && git clone https://github.com/coredns/coredns.git /usr/src/coredns \
+        && cd /usr/src/coredns && echo proxy:github.com/coredns/proxy  ./plugin.cfg &&  echo blocklist:github.com/relekang/coredns-blocklist  ./plugin.cfg && make \
         && rm -rf /var/cache/apk/*
 ##### Runtime
 FROM alpine AS runtime
