--- a/clash/Dockerfile
+++ b/clash/Dockerfile
@@ -5,7 +5,7 @@ ADD /script/iptables.sh /tmp/iptables.sh
 ADD /entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata wget bash iptables \
+        && apk --no-cache add -f ca-certificates tzdata wget curl bash iptables \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && chmod +x /tmp/iptables.sh \
