--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -34,10 +34,10 @@ jobs:
       #run: |
         #cd ./blocky
         #docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/blocky --platform linux/arm64,linux/amd64 . --push
-    #- name: docker v2raya
-      #run: |
-        #cd ./v2raya
-        #docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/v2raya --platform linux/arm64,linux/amd64 . --push
+    - name: docker v2raya
+      run: |
+        cd ./v2raya
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/v2raya --platform linux/arm64,linux/amd64 . --push
     #- name: docker smartdns
       #run: |
         #cd ./smartdns
