--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -46,6 +46,10 @@ jobs:
       #run: |
         #cd ./coredns
         #docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/coredns --platform linux/arm64,linux/amd64 . --push
+    - name: docker technitium
+      run: |
+        cd ./technitium
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/dns-server --platform linux/arm64,linux/amd64 . --push
     - name: docker clash
       run: |
         cd ./clash
