--- a/clash/Dockerfile
+++ b/clash/Dockerfile
@@ -6,6 +6,8 @@ RUN set -ex \
         &&  if [ $(arch) == aarch64 ]; then     wget -P /usr/bin https://github.com/Dreamacro/clash/releases/download/premium/clash-linux-arm64-$clash.gz;     gunzip /usr/bin/clash-linux-arm64-$clash.gz;     mv /usr/bin/clash-linux-arm64-$clash /usr/bin/clash; fi \
         && if [ $(arch) == x86_64 ]; then     wget -P /usr/bin https://github.com/Dreamacro/clash/releases/download/premium/clash-linux-amd64-$clash.gz;     gunzip /usr/bin/clash-linux-amd64-$clash.gz;     mv /usr/bin/clash-linux-amd64-$clash /usr/bin/clash; fi \
         && chmod +x /usr/bin/clash \
+        && wget -P /tmp https://github.com/Loyalsoldier/geoip/releases/latest/download/Country.mmdb \
+        && wget -P /tmp https://github.com/haishanh/yacd/releases/download/v0.3.8/yacd.tar.xz \
         && rm -rf /var/cache/apk/*
 
 FROM alpine
@@ -13,6 +15,8 @@ ENV iptables=true \
     tun=false
 ADD /script/iptables.sh /tmp/iptables.sh
 COPY --from=builder /usr/bin/clash /usr/bin/clash
+COPY --from=builder /tmp/Country.mmdb /tmp/Country.mmdb
+COPY --from=builder /tmp/yacd.tar.xz  /tmp/yacd.tar.xz
 ADD /entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
