--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -53,4 +53,4 @@ jobs:
     - name: docker clash
       run: |
         cd ./clash
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash --platform linux/arm64,linux/amd64 . --push
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash:test --platform linux/arm64,linux/amd64 . --push
