--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -30,10 +30,10 @@ jobs:
       #run: |
         #cd ./mosdns
         #docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/mosdns --platform linux/arm64,linux/amd64 . --push
-    #- name: docker blocky
-      #run: |
-        #cd ./blocky
-        #docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/blocky --platform linux/arm64,linux/amd64 . --push
+    - name: docker blocky
+      run: |
+        cd ./blocky
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/blocky --platform linux/arm64,linux/amd64 . --push
     - name: docker v2raya
       run: |
         cd ./v2raya
