--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -42,10 +42,10 @@ jobs:
       #run: |
         #cd ./smartdns
         #docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/smartdns --platform linux/arm64,linux/amd64 . --push
-    #- name: docker coredns
-      #run: |
-        #cd ./coredns
-        #docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/coredns --platform linux/arm64,linux/amd64 . --push
+    - name: docker coredns
+      run: |
+        cd ./coredns
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/coredns --platform linux/arm64,linux/amd64 . --push
     - name: docker technitium
       run: |
         cd ./technitium
