--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -22,10 +22,10 @@ jobs:
         docker buildx create --use --name mybuilder
         docker buildx inspect mybuilder --bootstrap
         docker buildx ls
-    #- name: docker cfdns
-      #run: |
-        #cd ./cfdns
-        #docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/cfdns --platform linux/arm64,linux/amd64 . --push
+    - name: docker adguardhome
+      run: |
+        cd ./adguardhome
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/adguardhome --platform linux/arm64,linux/amd64 . --push
     - name: docker mosdns
       run: |
         cd ./mosdns
@@ -53,4 +53,4 @@ jobs:
     - name: docker clash
       run: |
         cd ./clash
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash:test --platform linux/arm64,linux/amd64 . --push
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash --platform linux/arm64,linux/amd64 . --push
