--- a/smartdns/Dockerfile
+++ b/smartdns/Dockerfile
@@ -1,13 +1,17 @@
 FROM alpine:edge as builder
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk add cargo git musl-dev gcc g++ \
+        && apk add cargo git musl-dev gcc g++ wget \
         && git clone https://github.com/mokeyish/smartdns-rs.git /usr/src/smartdns-rs && cd /usr/src/smartdns-rs && cargo build --release \
+        && if [ $(arch) == aarch64 ]; then     wget -O /tmp/smartdns https://github.com/pymumu/smartdns/releases/download/Release42/smartdns-aarch64; fi \
+        && if [ $(arch) == x86_64 ]; then     wget -O /tmp/smartdns https://github.com/pymumu/smartdns/releases/download/Release42/smartdns-x86_64; fi \
+        && chmod +x /tmp/smartdns \
         && rm -rf /var/cache/apk/*
 ##### Runtime
 FROM alpine AS runtime
 ADD entrypoint.sh /entrypoint.sh
 COPY --from=builder /usr/src/smartdns-rs/target/release/smartdns /usr/bin/smartdns
+COPY --from=builder /tmp/smartdns /tmp/smartdns
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk --no-cache add -f tzdata wget libgcc bash openrc \
