--- a/AdGuardHome/Dockerfile
+++ b/AdGuardHome/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:edge as builder
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk add wget \
+        && apk add wget curl \
         && if [ $(arch) == aarch64 ]; then      curl -L -H "Cache-Control: no-cache" -o /AdGuardHome.tar.gz https://static.adguard.com/adguardhome/edge/AdGuardHome_linux_arm64.tar.gz; fi \
         && if [ $(arch) == x86_64 ]; then      curl -L -H "Cache-Control: no-cache" -o /AdGuardHome.tar.gz https://static.adguard.com/adguardhome/edge/AdGuardHome_linux_amd64.tar.gz; fi \
         && tar -zxvf AdGuardHome.tar.gz \
