--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -38,10 +38,10 @@ jobs:
       run: |
         cd ./v2raya
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/v2raya --platform linux/arm64,linux/amd64 . --push
-    #- name: docker smartdns
-      #run: |
-        #cd ./smartdns
-        #docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/smartdns --platform linux/arm64,linux/amd64 . --push
+    - name: docker xray
+      run: |
+        cd ./xray
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/xray --platform linux/arm64,linux/amd64 . --push
     - name: docker coredns
       run: |
         cd ./coredns
