--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -62,4 +62,8 @@ jobs:
       run: |
         cd ./ssws
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/ssws --platform linux/arm64,linux/amd64 . --push
+    - name: docker v2p
+      run: |
+        cd ./v2p
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/elecv2p:v2p --platform=linux/arm64,linux/amd64 . --push  
         
