--- a/mosdns/Dockerfile
+++ b/mosdns/Dockerfile
@@ -1,8 +1,10 @@
 FROM alpine:edge as builder
-
+ADD auto_ecs.go /test/auto_ecs.go
+ADD enabled_plugins.go /test/enabled_plugins.go
 RUN apk update -f && apk upgrade
 RUN apk add libc-dev git go upx make byacc musl gcc libevent-dev openssl-dev expat-dev hiredis-dev libsodium-dev libmnl-dev
-RUN git clone https://github.com/IrineSistiana/mosdns.git /usr/src/mosdns && cd /usr/src/mosdns && go build -o /usr/src/mosdns/mosdns
+RUN git clone https://github.com/IrineSistiana/mosdns.git /usr/src/mosdns && cd /usr/src/mosdns && mv /test/enabled_plugins.go /usr/src/mosdns/plugin/enabled_plugins.go && go build -o /usr/src/mosdns/mosdns
+
 RUN git clone https://github.com/AdguardTeam/dnsproxy.git /usr/src/dnsproxy && cd /usr/src/dnsproxy && go build -mod=vendor -o /usr/src/dnsproxy/dnsproxy
 
 FROM alpine as runtime
