--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -65,5 +65,5 @@ jobs:
     - name: docker v2p
       run: |
         cd ./v2p
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/elecv2p:v2p --platform=linux/arm64,linux/amd64 . --push  
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/elecv2p --platform=linux/arm64,linux/amd64 . --push  
         
