--- a/blocky/Dockerfile
+++ b/blocky/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:edge as builder
 
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk add git go upx \
+        && apk add git go \
         && git clone https://github.com/0xERR0R/blocky.git /usr/src/blocky && cd /usr/src/blocky && go build -p 8 -o /usr/src/blocky/blocky
 FROM alpine
 COPY --from=builder /usr/src/blocky/blocky /usr/bin/blocky
