--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -63,5 +63,9 @@ jobs:
     - name: docker v2p
       run: |
         cd ./v2p
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/elecv2p --platform=linux/arm64,linux/amd64 . --push  
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/elecv2p --platform=linux/arm64,linux/amd64 . --push
+    - name: docker coredns
+      run: |
+        cd ./coredns
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/coredns --platform linux/arm64,linux/amd64 . --push
         
