--- a/coredns/Dockerfile
+++ b/coredns/Dockerfile
@@ -1,14 +1,14 @@
 FROM alpine:edge as builder
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk add go git musl-dev gcc g++ make \
-        && git clone https://github.com/coredns/coredns.git /usr/src/coredns \
-        && cd /usr/src/coredns && make \
+        && apk add go git musl-dev gcc g++ make coredns \
+        #&& git clone https://github.com/coredns/coredns.git /usr/src/coredns \
+        #&& cd /usr/src/coredns && make \
         && rm -rf /var/cache/apk/*
 ##### Runtime
 FROM alpine AS runtime
 ADD entrypoint.sh /entrypoint.sh
-COPY --from=builder /usr/src/coredns/coredns /usr/bin/coredns
+COPY --from=builder /usr/bin/coredns /usr/bin/coredns
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk --no-cache add -f tzdata wget libgcc bash \
