--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -28,6 +28,10 @@ jobs:
       run: |
         cd ./AdGuardHome
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/adguardhome --platform linux/arm64,linux/amd64 . --push
+    - name: docker cdns
+      run: |
+        cd ./cdns
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/cdns --platform linux/arm64,linux/amd64 . --push
     - name: docker mosdns
       run: |
         cd ./mosdns
