--- a/cdns/Dockerfile
+++ b/cdns/Dockerfile
@@ -5,9 +5,9 @@ RUN set -ex \
         && if [ $(arch) == aarch64 ]; then      curl -L -H "Cache-Control: no-cache" -o /cdns-linux.tar.gz https://github.com/yaotthaha/cdns/releases/download/v0.0.3/cdns-linux-arm64.tar.gz; fi \
         && if [ $(arch) == x86_64 ]; then      curl -L -H "Cache-Control: no-cache" -o /cdns-linux.tar.gz https://github.com/yaotthaha/cdns/releases/download/v0.0.3/cdns-linux-amd64.tar.gz; fi \
         && tar -zxvf cdns-linux.tar.gz \
-        && if [ $(arch) == aarch64 ]; then      mv /cdns-linux-arm64 /usr/bin/cdns; chmod +x /cdns-linux-arm64; fi \
-        && if [ $(arch) == x86_64 ]; then      mv /cdns-linux-amd64 /usr/bin/cdns; chmod +x /cdns-linux-amd64; fi \
-        && chmod +x /cdns-linux-arm64 \
+        && if [ $(arch) == aarch64 ]; then      mv /cdns-linux-arm64 /usr/bin/cdns; fi \
+        && if [ $(arch) == x86_64 ]; then      mv /cdns-linux-amd64 /usr/bin/cdns; fi \
+        && chmod +x /usr/bin/cdns \
         && rm -rf /var/cache/apk/*
 FROM alpine
 COPY --from=builder /usr/bin/cdns /usr/bin/cdns
