--- a/cdns/Dockerfile
+++ b/cdns/Dockerfile
@@ -2,12 +2,8 @@ FROM alpine:edge as builder
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add wget curl \
-        && if [ $(arch) == aarch64 ]; then      curl -L -H "Cache-Control: no-cache" -o /cdns-linux.tar.gz https://github.com/yaotthaha/cdns/releases/download/v0.0.3/cdns-linux-arm64.tar.gz; fi \
-        && if [ $(arch) == x86_64 ]; then      curl -L -H "Cache-Control: no-cache" -o /cdns-linux.tar.gz https://github.com/yaotthaha/cdns/releases/download/v0.0.3/cdns-linux-amd64.tar.gz; fi \
-        && tar -zxvf cdns-linux.tar.gz \
-        && if [ $(arch) == aarch64 ]; then      mv /cdns-linux-arm64 /tmp/cdns; fi \
-        && if [ $(arch) == x86_64 ]; then      mv /cdns-linux-amd64 /tmp/cdns; fi \
-        && chmod +x /tmp/cdns \
+        && apk add wget curl libc-dev git go upx make \
+        && git clone https://github.com/yaotthaha/cdns.git /usr/src/cdns && cd /usr/src/cdns && make build \
         && rm -rf /var/cache/apk/*
 FROM alpine
 COPY --from=builder /tmp/cdns /usr/bin/cdns
