--- a/coredns/Dockerfile
+++ b/coredns/Dockerfile
@@ -11,7 +11,7 @@ ADD entrypoint.sh /entrypoint.sh
 COPY --from=builder /usr/bin/coredns /usr/bin/coredns
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f tzdata wget libgcc bash \
+        && apk --no-cache add -f tzdata libgcc bash \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && mkdir -p /coredns \
