--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -5,6 +5,9 @@ on:
       - main
   watch:
     types: started
+# 定时触发编译
+  schedule:
+    - cron: 39 22 * * 4
 jobs:
   build:
     runs-on: ubuntu-20.04  
