--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -77,3 +77,8 @@ jobs:
       run: |
         cd ./smartdns
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/smartdns --platform linux/arm64,linux/amd64 . --push
+    - name: docker singbox
+      run: |
+        cd ./singbox
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/singbox --platform linux/arm64,linux/amd64 . --push
+        
