--- a/smartdns/Dockerfile
+++ b/smartdns/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine as builder
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add cargo git musl-dev gcc g++ wget \
-        && git clone https://github.com/mokeyish/smartdns-rs.git /usr/src/smartdns-rs && cd /usr/src/smartdns-rs && cargo build --release \
+        #&& git clone https://github.com/mokeyish/smartdns-rs.git /usr/src/smartdns-rs && cd /usr/src/smartdns-rs && cargo build --release \
         && if [ $(arch) == aarch64 ]; then     wget -O /tmp/smartdns https://github.com/pymumu/smartdns/releases/download/Release43/smartdns-aarch64; fi \
         && if [ $(arch) == x86_64 ]; then     wget -O /tmp/smartdns https://github.com/pymumu/smartdns/releases/download/Release43/smartdns-x86_64; fi \
         && chmod +x /tmp/smartdns \
