--- a/cdns/Dockerfile
+++ b/cdns/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine as builder
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add wget curl git go make \
-        && git clone https://github.com/yaotthaha/cdns.git /usr/src/cdns && cd /usr/src/cdns && go build -o /usr/src/cdns/cdns -a -ldflags '-extldflags "-static"' \
+        && git clone https://github.com/rnetx/cdns.git /usr/src/cdns && cd /usr/src/cdns && go build -o /usr/src/cdns/cdns -a -ldflags '-extldflags "-static"' \
         && rm -rf /var/cache/apk/*
 FROM alpine
 COPY --from=builder /usr/src/cdns/cdns /usr/bin/cdns
