--- a/mosdns/Dockerfile
+++ b/mosdns/Dockerfile
@@ -10,6 +10,7 @@ RUN set -ex \
 
 FROM alpine as runtime
 COPY --from=builder /usr/src/mosdns/mosdns /usr/bin/mosdns
+COPY --from=builder /AdGuardHome/AdGuardHome /usr/bin/AdGuardHome
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
