--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -50,10 +50,10 @@ jobs:
       run: |
         cd ./technitium
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/dns-server --platform linux/arm64,linux/amd64 . --push
-    - name: docker clash
-      run: |
-        cd ./clash
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash --platform linux/arm64,linux/amd64 . --push
+    #- name: docker clash
+      #run: |
+        #cd ./clash
+        #docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash --platform linux/arm64,linux/amd64 . --push
     - name: docker test
       run: |
         cd ./test
