--- a/ssws/Dockerfile
+++ b/ssws/Dockerfile
@@ -3,7 +3,7 @@ RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add go git musl-dev gcc g++ make automake \
         && git clone https://github.com/shadowsocks/shadowsocks-libev /usr/src/shadowsocks \
-        && cd /usr/src/cdns && ./autogen.sh && ./configure --prefix=/usr/local --disable-documentation \
+        && cd /usr/src/shadowsocks && ./autogen.sh && ./configure --prefix=/usr/local --disable-documentation \
         && make -j$(getconf _NPROCESSORS_ONLN) \
         && make install
         
