--- a/ssws/Dockerfile
+++ b/ssws/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine as builder
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk add go git musl-dev gcc g++ make automake \
+        && apk add go git musl-dev gcc g++ make automake autoconf \
         && git clone https://github.com/shadowsocks/shadowsocks-libev /usr/src/shadowsocks \
         && cd /usr/src/shadowsocks && ./autogen.sh && ./configure --prefix=/usr/local --disable-documentation \
         && make -j$(getconf _NPROCESSORS_ONLN) \
