--- a/blocky/Dockerfile
+++ b/blocky/Dockerfile
@@ -3,7 +3,8 @@ RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add git go \
         && git clone https://github.com/0xERR0R/blocky.git /usr/src/blocky && cd /usr/src/blocky && go build -o /usr/src/blocky/blocky -a -ldflags '-extldflags "-static"'
-FROM alpine
+##### Runtime
+FROM alpine AS runtime
 COPY --from=builder /usr/src/blocky/blocky /usr/bin/blocky
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
