--- a/v2p/Dockerfile
+++ b/v2p/Dockerfile
@@ -6,7 +6,7 @@ RUN set -ex \
         && apk --no-cache add -f tzdata git bash nodejs yarn curl wget coreutils moreutils perl python3 py3-pip \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && ln -sf /usr/bin/python3 /usr/bin/python \
-        && pip3 install requests beautifulsoup4 \
+        && pip3 install requests \
         && echo "Asia/Shanghai" > /etc/timezone \
         && git clone https://github.com/elecV2/elecV2P.git /usr/local/app \
         && sed -i "s/60000/0/g" /usr/local/app/func/exec.js \
