--- a/cdns/Dockerfile
+++ b/cdns/Dockerfile
@@ -5,7 +5,7 @@ RUN set -ex \
         && git clone https://github.com/rnetx/cdns.git /usr/src/cdns && cd /usr/src/cdns && go build -o /usr/src/cdns/cdns -a -ldflags '-extldflags "-static"' \
         && rm -rf /var/cache/apk/*
 ##### Runtime
-FROM alpine AS runtime
+FROM alpine:edge AS runtime
 COPY --from=builder /usr/src/cdns/cdns /usr/bin/cdns
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
