--- a/cdns/Dockerfile
+++ b/cdns/Dockerfile
@@ -3,10 +3,12 @@ RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add wget curl git go make \
         && git clone https://github.com/rnetx/cdns.git /usr/src/cdns && cd /usr/src/cdns && go build -o /usr/src/cdns/cdns -a -ldflags '-extldflags "-static"' \
+        && git clone https://github.com/IrineSistiana/mosproxy.git /usr/src/mosproxy && cd /usr/src/mosproxy && go build -o /usr/src/mosproxy/mosproxy -a -ldflags '-extldflags "-static"' \
         && rm -rf /var/cache/apk/*
 ##### Runtime
 FROM alpine:edge AS runtime
 COPY --from=builder /usr/src/cdns/cdns /usr/bin/cdns
+COPY --from=builder /usr/src/mosproxy/mosproxy /usr/bin/mosproxy
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
